fixed white space html with min-height and body class

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     left:0px;
 }
 
-html {
+.body {
     background-image: url('./images/bg-mobile.svg');
     background-color: var(--violet);
     background-position: center;
@@ -127,8 +127,8 @@ html {
 }
 /******************************* MEDIA QUERIES ***************************** */
 @media all and (min-width: 1024px) {
-html {
-    height: 100vh;
+.body {
+    min-height: 100vh;
     width: 100%;
     background-image: url('./images/bg-desktop.svg');
     background-position: center;
